# kde-plasma-adaptive-wallpaper-accent-color

./: CMakeLists.txt  README.md
include/: cluster.h  wallpaper.h  wallpaperUtils.h
src/: cluster.cpp  main.cpp  wallpaper.cpp  wallpaperUtils.cpp
